# monica

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
config/: 1b.yaml  2b.yaml  4b.yaml  poc-qwen.yaml  poc-small.yaml  poc.yaml  small.yaml  student-1b-attn-hi.yaml  student-1b-attn-lo.yaml  student-1b.yaml  toy-distill.yaml  toy-hybrid.yaml  toy-moe.yaml  toy-muon.yaml  toy.yaml
config/manifests/: student-1b-attn-hi-1k.yaml  student-1b-attn-hi.yaml  student-1b-attn-lo.yaml  student-1b-attn12pct.yaml  student-1b-attn8pct.yaml
docs/: MAC_RUNBOOK.md  infrastructure.md  local-development.md  path-b-run.md  runpod-poc-run.md  usage.md
docs/design/: 01-architecture-seam.md  02-model-ssm.md  03-conformance.md  04-data-pipeline.md  05-training.md  06-smoke-gate-and-eval.md  07-configs-and-decisions.md  08-corpus-pipeline.md  09-hybrid-architectures.md  10-distillation.md  11-post-training.md  12-lsp-in-the-loop.md  13-code-model-moe.md  README.md
docs/reserve/: 10-distillation.md  path-b-run.md  runpod-poc-run.md
docs/reserve/runbooks/: m10-phase-bprime-append.md  m10-pod-chain.md
docs/runbooks/: m10-phase-bprime-append.md  m10-pod-chain.md
eval_sets/humaneval_ts/: humaneval_ts.jsonl
eval_sets/opengrep_rules/: README.md  correctness.yaml
eval_sets/ts_error_injection/: README.md  clean_prefixes.jsonl  eval.jsonl  eval_table_c_subset.jsonl  package-lock.json  package.json  tsconfig.json
results/: ablation_05b_greedy.json  ablation_05b_temp08.json  ablation_strip_suggestions.json  e1_instruct_block.json  e1_instruct_stmt.json  e2_7b_stmt.json  e3_ssm_130m_stmt.json  e3_ssm_codestral_stmt.json  e4_overrepair_base.json  e4_overrepair_instruct.json  e4_overrepair_realcode.json  e4_overrepair_realcode_fix.json  e4_overrepair_realcode_fix2.json  f1_base.json  f1_both.json  f1_ts.json  f1_ts_fix.json  f1_ts_fix2.json  headroom_greedy.json  headroom_temp08.json  table_a.json  table_b.json  table_c.json  ts_lsp_multipush_probe.json  tsc_lsp_divergence.json  tsc_lsp_divergence_subcause.json
scripts/: analyze_tsc_lsp_divergence.py  append_new_chunks.py  bench_context.py  bench_cuda_train_step.py  bench_precision.py  bench_train_step.py  build_clean_prefix_set.py  build_corpus.py  build_humaneval_ts_set.py  build_ts_clean_corpus.py  distill.py  distill_corpus_from_jsonl.py  distill_smoke.py  dpo.py  eval_bfcl.py  eval_lsp_harness.py  eval_lsp_humaneval.py  eval_olmes.py  gen_onpolicy_prefs.py  generate.py  local_validate.sh  long_context.py  merge_teacher_shards.py  model_size.py  moe_experiment.py  opengrep_soak.py  precompute_teacher.py  probe_ts_lsp_multipush.py  probe_tsc_lsp_divergence_subcause.py  probes.py  quantize.py  retrieval_probe.py  rlvr.py  sft.py  smoke_test.py  spec_decode.py  sweep.py  train.py  train_time.py  validate_ts_error_set.py  (+1 more)
scripts/runpod/m10/: bootstrap.sh  preflight.sh  run_distill.sh  run_posttrain.sh  run_precompute.sh  run_precompute_shard.sh  run_sync.sh
src/: __init__.py
src/conformance/: __init__.py  backend_parity.py  doc_boundary_parity.py  forward_step_parity.py
src/data/: __init__.py  blend.py  chat_template.py  corpus.py  datatrove_pipeline.py  dedup.py  distill_corpus.py  distill_sources.py  download.py  dpo_data.py  dpo_loader.py  dpo_sources.py  filters.py  instruct_format.py  instruct_sft.py  loader.py  pack.py  r2_sync.py  reasoning_sft.py  reasoning_traces.py  sft_data.py  sft_loader.py  sft_sources.py  shard.py  split.py  stack_v2.py  storage.py  teacher_outputs.py  tokenize.py  tokenizer_train.py  tool_sft.py  tool_sources.py  ts_clean.py
src/eval/: __init__.py  bfcl_adapter.py  long_context.py  lsp_eval.py  olmes_adapter.py  probes.py  quantize.py  retrieval_probe.py  ts_error_eval.py  val_loss.py
src/lsp/: __init__.py  chat.py  diagnostics.py  execute.py  harness.py  jsonrpc.py  lm.py  opengrep.py  oracle.py  prettier.py  ts_boundaries.py  ts_lsp.py  tsc.py
src/model/: __init__.py  api_teacher.py  backend.py  blocks.py  cuda_backend.py  cuda_distill.py  cuda_muon.py  cuda_student_init.py  cuda_teacher.py  cuda_train_step.py  interface.py  mlx_backend.py  mlx_distill.py  mlx_lm_adapter.py  mlx_student_init.py  mlx_teacher.py  mlx_train_step.py  sizing.py  teacher.py  train_time.py
src/serve/: __init__.py  generate.py  rewind.py  sampling.py  sessions.py  spec_decode.py
src/train/: __init__.py  checkpoint.py  distill_manifest.py  dpo_math.py  grpo.py  logging.py  loop.py  loss_scale.py  schedule.py  sweep.py  verifiers.py
swift/: .gitignore  Package.swift
swift/Sources/MonicaTokenizer/: BPE.swift  Packing.swift  Pretokenizer.swift  Tokenizer.swift  TokenizerFormat.swift  Trainer.swift
swift/Sources/monica-selfcheck/: main.swift
swift/Sources/monica-tokenize/: main.swift
tests/: conftest.py  test_api_teacher.py  test_append_new_chunks.py  test_backend_parity.py  test_bench_context.py  test_bfcl_adapter.py  test_blend.py  test_build_humaneval_ts_set.py  test_build_ts_clean_corpus.py  test_chat_template.py  test_checkpoint.py  test_cleaned_jsonl.py  test_corpus.py  test_cuda_compile.py  test_cuda_distill.py  test_cuda_doc_boundary_parity.py  test_cuda_fp8.py  test_cuda_muon.py  test_cuda_parity.py  test_cuda_post_training.py  test_cuda_student_init.py  test_cuda_teacher.py  test_cuda_train_step.py  test_data_pipeline.py  test_datatrove_pipeline.py  test_dedup.py  test_distill_corpus.py  test_distill_driver.py  test_distill_manifest.py  test_distill_sources.py  test_distill_train_step.py  test_doc_boundary_parity.py  test_download_sources.py  test_dpo_data.py  test_dpo_loader.py  test_dpo_math.py  test_dpo_sources.py  test_dpo_train_step.py  test_dt_bias.py  test_filters.py  (+65 more)
