[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "monica-mamba-poc"
version = "0.0.1"
description = "Mamba (selective SSM) LM proof-of-concept: develop on Apple Silicon (MLX), migrate to CUDA behind one seam."
requires-python = ">=3.10"
# Portable deps (run anywhere, incl. this Linux container).
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
    "safetensors>=0.4",
]

[project.optional-dependencies]
# Data pipeline at full scale (download/tokenize). pyarrow + fsspec back the corpus
# Parquet sharded IO (src/data/corpus.py); fsspec also gives the file://-now /
# s3://-later storage URI seam (the R2 writer swap is #80).
data = ["datasets>=2.0", "transformers>=4.40", "pyarrow>=14", "fsspec>=2024.0"]
# Scale corpus engine (#65/#80): HF datatrove runs the same pipeline shape on
# R2/RunPod. The local skeleton (src/data/corpus.py) is pyarrow-native and does NOT
# require this; install it only where the cloud pipeline runs.
datatrove = ["datatrove>=0.6"]
# Apple Silicon backend (NOT installable on Linux/CUDA hosts).
mlx = ["mlx>=0.18"]
# CUDA / PyTorch backend (Linux/CUDA host; also runs CPU-only for conformance on a Mac).
cuda = ["torch>=2.0"]
# Optional fused CUDA kernels (#40): mamba-ssm provides the Triton SSD chunked scan
# (mamba_chunk_scan_combined) and causal-conv1d the depthwise conv fast path.
# Both are auto-detected at runtime and degrade gracefully when absent.
# Note: mamba-ssm 2.x top-level package requires a compatible transformers version;
# the ops submodule used here (mamba_ssm.ops.triton) works independently.
cuda-fast = ["torch>=2.0", "mamba-ssm>=2.0", "causal-conv1d>=1.0"]
# Experiment logging.
logging = ["wandb>=0.16"]
# Tier-2 OLMES/lm-eval benchmark harness. A heavy optional dependency (some
# versions pull in torch) — install only where benchmarks run; above the seam
# it may only ever be imported lazily (inside functions), never at module level.
eval = ["lm-eval>=0.4.5,<0.5"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
# Discover `src` and all subpackages (src.data, src.train, ...); a bare
# packages=["src"] omits subpackages in non-editable installs.
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
