[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "monica-mamba-poc"
version = "0.0.1"
description = "Mamba (selective SSM) LM proof-of-concept: develop on Apple Silicon (MLX), migrate to CUDA behind one seam."
requires-python = ">=3.10"
# Portable deps (run anywhere, incl. this Linux container).
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
    "safetensors>=0.4",
]

[project.optional-dependencies]
# Data pipeline at full scale (download/tokenize). pyarrow + fsspec back the corpus
# Parquet sharded IO (src/data/corpus.py); fsspec also gives the file://-now /
# s3://-later storage URI seam (the R2 writer swap is #80).
data = ["datasets>=2.0", "transformers>=4.40", "tokenizers>=0.20", "pyarrow>=14", "fsspec>=2024.0"]
# Scale corpus engine (#65/#80): HF datatrove runs the same pipeline shape on
# R2/RunPod (src/data/datatrove_pipeline.py). The local skeleton (src/data/corpus.py) is
# pyarrow-native and does NOT require this; install it only where the cloud pipeline runs.
# `processing` pulls the text-processing deps (tokenizers/nltk used by MinHash, trafilatura
# extraction); `s3` the S3/R2 filesystem. datatrove supports Python <=3.12 — use a py3.11
# venv (`.venv-dt`) matching the RunPod images, NOT the main py3.14 env. No torch dependency.
datatrove = ["datatrove[processing,io,s3]>=0.9.0"]
# Apple Silicon backend (NOT installable on Linux/CUDA hosts).
mlx = ["mlx>=0.18"]
# #199 LSP-in-the-loop harness's model adapter (src/model/mlx_lm_adapter.py):
# mlx_lm wraps `mlx` with prompt-cache trimming (make_prompt_cache/trim_prompt_cache)
# the harness's rollback needs. Apple Silicon only, same as `mlx` above.
lsp = ["mlx-lm>=0.28"]
# Stage 1 of the #193 TS "LSP-clean" pipeline (src/data/stack_v2.py): resolves Stack v2
# file content from Software Heritage's public S3 bucket. Lazy-imported inside
# `resolve_swh_s3`/`download_contents` only, so the seam/import-guard stay clean.
stack-v2 = ["boto3>=1.34"]
# tree-sitter TypeScript parser for the #201 real-code over-repair probe builder
# (true top-level statement boundaries; src/lsp/ts_boundaries.py, imported lazily so
# the seam/import-guard are unaffected). Lightweight cross-platform wheels — kept out
# of the heavy `eval` (lm-eval/torch) extra on purpose.
tree-sitter = ["tree-sitter>=0.23", "tree-sitter-typescript>=0.23"]
# CUDA / PyTorch backend (Linux/CUDA host; also runs CPU-only for conformance on a Mac).
cuda = ["torch>=2.0"]
# Optional fused CUDA kernels (#40): mamba-ssm provides the Triton SSD chunked scan
# (mamba_chunk_scan_combined) and causal-conv1d the depthwise conv fast path.
# Both are auto-detected at runtime and degrade gracefully when absent.
# Note: mamba-ssm 2.x top-level package requires a compatible transformers version;
# the ops submodule used here (mamba_ssm.ops.triton) works independently.
cuda-fast = ["torch>=2.0", "mamba-ssm>=2.0", "causal-conv1d>=1.0"]
# fp8 MoE-expert linears via NVIDIA Transformer Engine (#240), separate from `cuda-fast`:
# TE is Hopper-only (sm_90+) and a heavy dependency, and fp8 applies only to the expert
# GEMMs (gate/up/down), not the whole model. Auto-detected at runtime by
# `cuda_backend._te_linear_cls()` and degrades to bf16/fp16 `nn.Linear` when absent or
# pre-Hopper. DESIGN-ONLY today (blocked on #214's CUDA MoE experts).
cuda-fp8 = ["torch>=2.0", "transformer-engine>=1.0"]
# Experiment logging.
logging = ["wandb>=0.16"]
# Tier-2 OLMES/lm-eval benchmark harness. A heavy optional dependency (some
# versions pull in torch) — install only where benchmarks run; above the seam
# it may only ever be imported lazily (inside functions), never at module level.
eval = ["lm-eval>=0.4.5,<0.5"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
# Discover `src` and all subpackages (src.data, src.train, ...); a bare
# packages=["src"] omits subpackages in non-editable installs.
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
